fix(filter): fix IE11 flex alignment issue

--- a/src/elements/filter/filter.scss
+++ b/src/elements/filter/filter.scss
@@ -4,12 +4,16 @@ filter {
 
 		>.collection-item {
 			display: flex;
-			align-items: baseline;
+			// align-items: baseline; // this does not work in IE11
 			padding-top: 0;
 			padding-bottom: 0;
 
 			&:hover {
 				background-color: #f2f2f2;
+			}
+
+			>.label {
+				margin-top: 5px;
 			}
 
 			>.operator {
